<resources>
    <string name="app_name">Web Tracker</string>

    <!-- region Commons -->
    <string name="commons_done">Concluído</string>
    <string name="commons_error">Erro</string>
    <!-- endregion -->

    <!-- region Authentication -->
    <string name="authentication_signIn">Entrar</string>
    <string name="authentication_login">Conectar</string>
    <string name="authentication_email">Email</string>
    <string name="authentication_password">Senha</string>
    <string name="authentication_cancel">Cancelar</string>
    <string name="authentication_login_error">Error ao efetuar login. Confira suas credenciais</string>
    <string name="authentication_internet_connection_error">Sem conexão a internet</string>
    <string name="authentication_empty_email_error">Campo do email não deve ser vazio</string>
    <string name="authentication_wrong_email_format_error">Email com formato invalido</string>
    <string name="authentication_empty_password_error">Campo da senha não deve ser vazio</string>
    <string name="login_locked_message">Limite de tentativas excedido. Nova tentativa permitida em %1$s</string>
    <!-- endregion -->

    <!-- region Employee Identification -->
    <string name="employee_identification_confirm">Confirmar</string>
    <string name="employee_identification_type_employee_number">Insira seu numero de matricula</string>
    <!-- endregion -->

    <!-- region Missing permissions -->
    <string name="missingPermissionsScreen_screen_title">Permissões</string>
    <string name="missingPermissionsScreen_title">Ops...</string>
    <string name="missingPermissionsScreen_explanationText">Para funcionar corretamente, o aplicativo necessita de todas as autorizações requisitadas. \n\n Configure as permissões através das configurações do seu smartphone.\n\n* Nota: O app utiliza dados de GPS para permitir o monitoramento das áreas agrícolas, inclusive quando estiver em segundo plano ou não estiver sendo usado, por isso é necessário conceder acesso à localização \"sempre\".</string>
    <string name="missingPermissionsScreen_openSettings">Acessar configurações</string>
    <string name="missingPermissionsScreen_snackBar_title">Permissões Necessárias</string>
    <string name="missingPermissionsScreen_snackBar_subtitle">Por favor, conceda as permissões necessárias para continuar</string>
    <!-- endregion -->

    <!-- region Units list -->
    <string name="unitListItem_download_unit">Baixar</string>
    <string name="unitListItem_access_unit">Acessar unidade</string>
    <string name="unitListItem_update_unit">Atualizar</string>
    <!-- endregion -->

    <!-- region Test Tags -->
    <string name="app_name_header_tag_test">app_name_header</string>
    <string name="app_name_footer_tag_test">app_name_footer</string>
    <string name="app_version_text_tag_test">version_text</string>
    <string name="authentication_loading_indicator_tag_test">loading_indicator</string>
    <string name="authentication_error_snack_bar_tag_test">error_snack_bar</string>
    <string name="popup_location_permission_checkbox">Autorizar acesso a localização o tempo todo.</string>
    <string name="popup_location_permission_description">O aplicativo coleta dados de localização para habilitar atividades de monitoramento nos talhões, mesmo quando o aplicativo está fechado ou não esta em uso.\nAutorize o acesso a localização para continuar usando o app.</string>
    <string name="popup_permission_cancel">Cancelar</string>
    <string name="popup_permission_confirm">Confirmar</string>
    <!-- endregion -->
</resources>